--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+nav ~ a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background: #D3D3D3;
+}
+
+figure{
+  align-content: center;
+}
+
+figcaption{
+  font-size: 10px;
+}
+
+p#featured-property{
+  width: 800px;
+  align-content: center;
+}
+
+#details{
+  display: block;
+  background: red;
+  text-align: center;
+}
+
+div{ 
+  float: left;
+  background: red;
+  width: .25;
+}
+
