--- a/style.css
+++ b/style.css
@@ -8,23 +8,24 @@ header {
   text-align: center;
 }
 
-nav ~ a{
+nav > a{
   padding-left: 10px;
   padding-right: 10px;
   background: #D3D3D3;
 }
 
 figure{
-  align-content: center;
+  text-align: center;
 }
 
 figcaption{
   font-size: 10px;
 }
 
-p#featured-property{
-  width: 800px;
-  align-content: center;
+#featured-property > p{
+  text-align: center;
+  padding-left: 300px;
+  padding-right: 300px;
 }
 
 #details{
@@ -36,6 +37,6 @@ p#featured-property{
 div{ 
   float: left;
   background: red;
-  width: .25;
+  width: 25%;
 }
 
