--- a/style.css
+++ b/style.css
@@ -3,3 +3,40 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin: auto;
+}
+
+nav a {
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: green;
+}
+
+
+figcaption {
+  font-size: 0.5em;
+  text-align: center;
+}
+
+
+#featured-property p {
+  padding-top: 10px;
+  text-align: center;
+  width: 800px;
+  margin: auto;
+}
+
+#details div {
+  display: block;
+  float: left;
+  text-align: center;
+  width: 25%;
+  background-color: red;
+}
