--- a/style.css
+++ b/style.css
@@ -3,3 +3,37 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+nav>a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background: lightgrey;
+}
+
+figcaption {
+  font-size: 10px;
+  text-align:center;
+}
+
+#featured-property p {
+  width: 800px;
+  margin: auto;
+  text-align: center;
+}
+
+#details div {
+  background-color: lightgrey;
+  display:block;
+  float:left;
+  width:25%;
+}
