--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
+h1{
+  color:red;
+  text-align:center;
+}
+
+figure{
+ margin-left: 15%;
+}
+
+nav a{
+  padding-left:10px;
+  padding-right:10px;
+  color:#D3D3D3;
+}
+
+figcaption{
+  font-size:10px;
+}
+
+#featured-property p {
+  width: 800px;
+  margin: auto;
+}
+
+#details div{
+  float: left;
+  display:block;
+  width:25%;
+}
+
 body {
   width: 100%;
   height: 100%;
