--- a/style.css
+++ b/style.css
@@ -1,5 +1,47 @@
-body {
+h1{
+  color: red;
+  text-align: center;
+}
+figure img{
+  display: block;
+  margin: 0 auto;
+}
+
+
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #d3d3d3;
+}
+
+figcaption{
+  font-size: 10px;
+}
+
+
+#featured-property p{
+  width: 800px;
+  margin: auto;
+}
+ #details div{
+   display: block;
+   float: left;
+}
+ 
+  
+/*div{*/
+/*  background-color: #d3d3d3;*/
+/*  text-align: center;*/
+/*}*/
+  
+/*div{*/
+/*background-color: blue;*/
+/*width: 25%;*/
+/*}*/
+
+body{
   width: 100%;
   height: 100%;
   margin: 0;
+ 
 }
